; ModuleID = '/home/carl/AnghaBench/lab/engine/code/server/extr_sv_client.c_SV_UpdateUserinfo_f.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/server/extr_sv_client.c_SV_UpdateUserinfo_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { i32 }

@gvm = common dso_local global i32 0, align 4
@GAME_CLIENT_USERINFO_CHANGED = common dso_local global i32 0, align 4
@svs = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @SV_UpdateUserinfo_f to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SV_UpdateUserinfo_f(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %3 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @Cmd_Argv(i32 1)
  %7 = call i32 @Q_strncpyz(i32 %5, i32 %6, i32 4)
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %9 = call i32 @SV_UserinfoChanged(%struct.TYPE_6__* %8)
  %10 = load i32, i32* @gvm, align 4
  %11 = load i32, i32* @GAME_CLIENT_USERINFO_CHANGED, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @svs, i32 0, i32 0), align 4
  %14 = sext i32 %13 to i64
  %15 = sub i64 0, %14
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i64 %15
  %17 = call i32 @VM_Call(i32 %10, i32 %11, %struct.TYPE_6__* %16)
  ret void
}

declare dso_local i32 @Q_strncpyz(i32, i32, i32) #1

declare dso_local i32 @Cmd_Argv(i32) #1

declare dso_local i32 @SV_UserinfoChanged(%struct.TYPE_6__*) #1

declare dso_local i32 @VM_Call(i32, i32, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
